# qt_quick-

./: README.md
quick_opengl/: CMakeLists.txt  glBasis.cpp  glBasis.h  main.cpp  main.qml  openglItem.cpp
quick_opengl/quick_opengl/: CMakeLists.txt  glBasis.cpp  openglItem.h
